# studybuddy

./: .gitignore  LICENSE.md  README.md  pyproject.toml
app/: asgi.py  settings.template.py  urls.py  wsgi.py
study_buddy/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
study_buddy/fixtures/: course.json  userprofile.json
study_buddy/migrations/: 0001_initial.py
study_buddy/templates/: assignment_detail.html  assignment_form.html  base.html  course_confirm_delete.html  course_detail.html  course_form.html  course_list.html  forum_detail.html  home.html  lesson_form.html  login.html  register.html
